0.05
 - Improve doc in EXAMPLE2 section in doc.
 - Rename examples in examples/ directory to better names.
 - Update copyright years.

0.04 2022-06-01T12:31:02+02:00
 - Fix DEPENDENCIES section in doc.
 - Move bugtracker to github.
 - Update copyright years.

0.03 2022-05-09T22:54:45+02:00
 - Add test for star with explicit width.
 - Rewrite to use Tags::HTML. (Change in api, parameter 'tags' is
   optional).

0.02 2020-08-05T12:26:37+02:00
 - Fix test dependencies.

0.01 2020-08-04T16:04:18+02:00
 - First version.