@@ -1,4 +1,5 @@
 0.05
+ - Add tests with public_image_dir.
  - Improve doc in EXAMPLE2 section in doc.
  - Rename examples in examples/ directory to better names.
  - Update copyright years.
